--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -12,9 +12,9 @@
     <li>
       <div class="card-category card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://picsum.photos/seed/picsum/400/200?grayscale)">
         <h4 class="text-center"><%= link_to cocktail.name, cocktail_path(cocktail) %></h4>
-        <div class="row">
-          <%= link_to "Delete", cocktail_path(cocktail), method: :delete, class: "btn btn-outline-danger mr-2" %>
-          <%= link_to "Edit", edit_cocktail_path(cocktail), class: "btn btn-outline-dark" %>
+        <div class="row d-flex">
+          <%= link_to "", cocktail_path(cocktail), method: :delete, class: "far fa-trash-alt btn btn-outline-danger mr-2" %>
+          <%= link_to "", edit_cocktail_path(cocktail), class: "far fa-edit btn btn-outline-dark" %>
         </div>
       </div>
     </li>
