--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -7,6 +7,8 @@
   <%= simple_form_for (@cocktail) do |f| %>
     <%= f.input :name %>
     <%= f.input :description %>
+    <%= f.input :photo %>
+    <%= f.input :photo_cache, as: :hidden %>
     <div class="row justify-content-center">
       <%= f.button :submit, class: "btn-primary" %>
     </div>
