--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -6,6 +6,8 @@
   <%= simple_form_for (@cocktail) do |f| %>
     <%= f.input :name %>
     <%= f.input :description %>
+    <%= f.input :photo %>
+    <%= f.input :photo_cache, as: :hidden %>
     <div class="row justify-content-center">
       <div class="mr-2">
         <%= f.button :submit, class: "btn-primary" %>
