--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,4 @@
-<div class="banner flex-column center">
+<div class="banner flex-column center" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @cocktail.photo, crop: :fill %>')">
   <div class="flex-column">
     <h1 class="white text-center"><%= @cocktail.name %></h1>
   </div>
@@ -8,17 +8,17 @@
 </div>
 
 <div class="container d-flex">
-  <div class="col-6">
+  <div class="col-6 sepa">
     <h4>Description</h4>
     <p><%= @cocktail.description %></p>
     <%= link_to "Edit", edit_cocktail_path(@cocktail), class: "btn btn-secondary" %>
   </div>
-  <div class="col-6">
+  <div class="col-6 ml-3">
     <h4>List of ingredients</h4>
     <ul>
       <% @cocktail.doses.each do |dose| %>
         <li>
-          <%= link_to "X", dose_path(dose), method: :delete %>
+          <%= link_to "", dose_path(dose), method: :delete, class: "far fa-trash-alt mr-3" %>
           <%= dose.description %> - <%= dose.ingredient.name %>
         </li>
       <% end %>
